<resources>
    <string name="app_name">Absensi</string>
    <string name="title_activity_login">Masuk</string>
    <string name="sub_title_activity_login">Jelajahi Layanan HR Generasi Selanjutnya</string>
    <string name="username_title_activity_login">Username</string>
    <string name="password_title_activity_login">Password</string>
    <string name="title_activity_home">Beranda</string>
    <string name="welcome_title_activity_home">Selamat Datang Kembali</string>
    <string name="user_text_activity_home">Hartinah</string>
    <string name="attendance_title_activity_home">Absensi</string>
    <string name="request_title_activity_home">Pengajuan</string>
    <string name="approval_title_activity_home">Approval</string>
    <string name="profile_title_activity_home">Akun</string>
    <string name="name_title_activity_profile">Hartinah</string>
    <string name="birth_place_activity_profile">Tempat Lahir</string>
    <string name="birth_date_activity_profile">Tanggal Lahir</string>
    <string name="email_title_activity_profile">Email</string>
    <string name="nim_title_activity_profile">NIP</string>
    <string name="university_title_activity_profile">Universitas</string>
    <string name="university_activity_profile">Bina Nusantara</string>
    <string name="title_activity_request">Pengajuan terbaru</string>
    <string name="view_all_title_activity_request">Lihat semua</string>
    <string name="item_title_activity_request">Pengajuan Sakit</string>
    <string name="status_title_activity_request">Status : Disetujui</string>
    <string name="period_title_activity_request">Periode: 25 Juni 2020 \- 26 Juni 2020</string>
    <string name="check_in_title_dashboard_fragment">Check In</string>
    <string name="check_out_title_dashboard_fragment">Check Out</string>

    <string name="absent_in_title_activity">Absen Masuk</string>
    <string name="absent_out_title_activity">Absen Keluar</string>
    <string name="absent_list_title_activity">Kehadiranku</string>
    <string name="absent_back_title_activity">Kembali</string>

    <string name="error_username_password_incorrect">Username atau password tidak sesuai</string>
    <string name="error_occurred_contact_admin">ada error di aplikasi, silahkan hubungi admin</string>
    <string name="error_not_connected_to_server">tidak terhubung ke server, cek koneksi internet anda dan silahkan coba kembali</string>
    <string name="error_username_password_not_empty">Username atau password tidak boleh kosong</string>
    <string name="success_absent_in">Absen Masuk Sukses</string>
    <string name="success_absent_out">Absen Keluar Sukses</string>
    <string name="all_absent_list_activity">Lihat Riwayat Absensi</string>

    <string name="leave_title_request_fragment">Cuti</string>
    <string name="permit_title_request_fragment">Izin</string>
    <string name="Sick_title_request_fragment">Sakit</string>
    <string name="overtime_title_request_fragment">Lembur</string>
    <string name="title_request_fragment">Pengajuanku</string>
    <string name="period_title_item_request_fragment">Periode :</string>
    <string name="created_title_item_request_fragment">Pembuat :</string>

    <string name="sick_form_title">Form Tambah Pengajuan Sakit</string>
    <string name="leave_form_title">Form Tambah Pengajuan Cuti</string>
    <string name="permit_form_title">Form Tambah Pengajuan Izin</string>
    <string name="overtime_form_title">Form Tambah Pengajuan Lembur</string>
    <string name="approver_title">Atasan</string>
    <string name="approver_name">Muhammad S</string>
    <string name="request_from_title">Dari</string>
    <string name="request_to_title">Sampai</string>
    <string name="leave_total_title">Sisa Cuti</string>
    <string name="reason_title">Alasan</string>
    <string name="letter_sick_title">Tanggal surat sakit</string>
    <string name="approval">Penyetujuan</string>
    <string name="approval_request_title">Penyetujuan Pengajuan</string>
    <string name="approval_status_title">Status</string>
    <string name="document_number_title">Nomor Dokumen</string>
    <string name="category_title">Kategori</string>

    <string name="old_password_title">Password Lama</string>
    <string name="new_password_title">Password Baru</string>

    <string name="item_no_absent_data">Belum ada Data</string>
    <string name="cancel">Batal</string>
    <string name="save">Simpan</string>
    <string name="pending">Tertunda</string>
    <string name="search">Cari</string>
    <string name="request_detail">Detail Pengajuan</string>
    <string name="notes">Catatan</string>
    <string name="edit_profile">Ubah Profil</string>
</resources>
