<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/homeBackgroundColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/approval_request_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/request_from_title"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/approval_status_title"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDateFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/approval_from"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/approval_status"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPending"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@android:color/white">

        <TextView
            android:id="@+id/tvPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:text="@string/pending"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvLeave"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@android:color/white">

        <TextView
            android:id="@+id/tvLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:text="@string/leave_title_request_fragment"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPermit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@android:color/white">

        <TextView
            android:id="@+id/tvPermit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:text="@string/permit_title_request_fragment"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSick"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@android:color/white">

        <TextView
            android:id="@+id/tvSick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:text="@string/Sick_title_request_fragment"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvOvertime"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@android:color/white">

        <TextView
            android:id="@+id/tvOvertime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:text="@string/overtime_title_request_fragment"/>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApproval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>