<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/edit_profile"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/birth_date_activity_profile"/>

    <LinearLayout
        android:id="@+id/llBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:background="@drawable/square_background_shape"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            tools:text="2020-06-01"/>

        <ImageView
            android:layout_gravity="center"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="3dp"
            android:src="@drawable/ic_calendar_black"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/birth_place_activity_profile"/>

    <EditText
        android:id="@+id/etBirthPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/profileBackgroundColor"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="14sp"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/old_password_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/profileBackgroundColor"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@android:color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textPassword"
            android:background="@android:color/white"
            android:maxLines="1"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:endIconMode="password_toggle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/new_password_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/profileBackgroundColor"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@android:color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:textAllCaps="false"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:backgroundTint="@color/leaveColorBackground"
        app:cornerRadius="15dp"
        android:text="@string/save"
        android:textColor="@android:color/white"/>
</LinearLayout>