<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pics">

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_above="@id/tv1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tv1"
                android:layout_above="@id/cardView"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_activity_login"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                android:layout_centerInParent="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_title_activity_login"
                        android:textColorHint="@android:color/black"
                        app:endIconMode="clear_text"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietUsername"
                            android:layout_width="match_parent"
                            android:textColor="@android:color/black"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_title_activity_login"
                        android:textColorHint="@android:color/black"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:backgroundTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView"
                android:layout_margin="5dp"
                android:text="@string/title_activity_login"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>