<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/homeBackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/title_request_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/request_from_title"/>

                <LinearLayout
                    android:id="@+id/llDateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/square_background_shape"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDateFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        tools:text="2020-06-01"/>

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="3dp"
                        android:src="@drawable/ic_calendar_black"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/request_to_title"/>

                <LinearLayout
                    android:id="@+id/llDateTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/square_background_shape"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDateTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        tools:text="2020-06-01"/>

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="3dp"
                        android:src="@drawable/ic_calendar_black"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSearch"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:text="@string/search" />
            </RelativeLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRequestList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>